ACK is input from floppy, DAV is output to floppy

--- a/hdl/Fake6523.ucf
+++ b/hdl/Fake6523.ucf
@@ -20,8 +20,8 @@ NET "port_a<6>"	LOC = "P50"  ; # DIO7, <-> wire 9
 NET "port_a<7>"	LOC = "P49"  ; # DIO8, <-> wire 10
 NET "port_b<0>"	LOC = "P47"  ; # STATUS0, <-, wire 12
 NET "port_b<1>"	LOC = "P45"  ; # STATUS1, <-, wire 14
-NET "port_c<6>"	LOC = "P46"  ; # ACK, ?, wire 13
-NET "port_c<7>"	LOC = "P48"  ; # DAV, ?, wire 11
+NET "port_c<6>"	LOC = "P46"  ; # ACK, <-, wire 13
+NET "port_c<7>"	LOC = "P48"  ; # DAV, ->, wire 11
 NET "rs<0>"			LOC = "P18"  ; # A0 exp. Y
 NET "rs<1>"			LOC = "P17"  ; # A1 exp. X
 NET "rs<2>"			LOC = "P16"  ; # A2 exp. W
