remove debug and test parts; reassign /cas location to ROM /CS; use GPIO lines to decode ROM /CS and ROM A15

--- a/hdl/Fake6523.ucf
+++ b/hdl/Fake6523.ucf
@@ -29,7 +29,6 @@ NET "rs<2>"			LOC = "P16"  ; # A2 exp. W
 # other inputs
 NET "phi2"			LOC = "P34"  ;	# Phi2 exp. 24
 NET "aec" 			LOC = "P33"  ; # AEC exp. 22
-NET "_cas"			LOC = "P42"  ; # /CAS exp. 11	XXX (remove in next rev)
 NET "ba"				LOC = "P43"  ; # BA exp. 13
 
 # ROM control
@@ -38,8 +37,7 @@ NET "c1hi"			LOC = "P36"  ; # J3-2			<- C1HI exp. 6
 NET "c2lo"			LOC = "P38"  ; # J3-3			<- C2LO exp. 7
 NET "c2hi"			LOC = "P39"  ; # J3-4			<- C2HI exp. 8
 NET "rom_a15"		LOC = "P40"  ; # J3-5			-> ROM A15 1
-NET "rom_cs"	   LOC = "P44"  ; # JP1				-> ROM /CE/OE 20+22 (temporary, use /CAS from P42 instead)
-//NET "rom_cs"		LOC = "P42"  ; # /CAS			-> ROM /CE/OE 20+22 XXX
+NET "rom_cs"		LOC = "P42"  ; # /CAS			-> ROM /CE/OE 20+22
 
 # PLA inputs
 NET "pla_i<1>"		LOC = "P6"	 ; # PLA I1 (8)   <- A11 exp. L
@@ -61,4 +59,4 @@ NET "pla_i<15>"   LOC = "P12"  ; # PLA I15 (20) <- A5 exp. T
 NET "addr<4>"     LOC = "P13"  ; # PLA xxx      <- A4 exp. U
 NET "addr<3>"     LOC = "P15"  ; # PLA xxx      <- A3 exp. V
 # additional output (temp. disabled)
-#NET "_resetout"   LOC = "P44"  ; # copy 5V /RESET to 3.3V /RESET XXX
+NET "_resetout"   LOC = "P44"  ; # copy 5V /RESET to 3.3V /RESET
