Ghosts'n'Goblins updated to REV1 (2026-01-14) from https://plus4world.powweb.com/software/Ghosts_N_Goblins_Arcade_Version

--- a/games/ghosts_n_goblins/Makefile
+++ b/games/ghosts_n_goblins/Makefile
@@ -23,7 +23,7 @@ ghosts.prg: ghosts_n_goblins_arcade_version.d64
 	$(EXOMIZER) desfx -o $@ ghosts
 	rm ghosts
 
-%.prg: %.asm ghosts_n_goblins-tcbm.prg
+%.prg: %.asm ghosts.prg
 	$(JAVA) -jar $(KICKASS) $(KICKASSFLAGS) $< -o $@
 
 %.d64: %.prg
